--- a/frontend.html
+++ b/frontend.html
@@ -39,18 +39,18 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=onh68fwC&__jvst=Employee+Referral&__jvsd=sybKIfwV&__jvsc=Twitter&bid=n47JWLw6'>ServiceNow Careers - Senior Front-End Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on:: 2019-07-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012052002'>Job Application for Senior JavaScript Front-End Developer at TrackTik</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/geophy/856efb92-cf13-4dc3-99c9-b2c9e664cab0'>GeoPhy - Front-end Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692429016-frontend-developer'>Netcentric Frontend Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692429016-frontend-developer'>Netcentric Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qteaVfww&k=Job&j=otXW9fwf&__jvst=Employee&__jvsd=sHNvxgwh&__jvsc=Twitter&bid=nEBAWLw1'>SparkPost Careers - Front End Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qteaVfww&k=Job&j=otXW9fwf&__jvst=Employee&__jvsd=sHNvxgwh&__jvsc=Twitter&bid=nEBAWLw1'>SparkPost Careers - Front End Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-07-29</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ungerboeck/job/oc6uafwG'>Ungerboeck Software International Careers - Front End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ungerboeck/job/oc6uafwG'>Ungerboeck Software International Careers - Front End Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vailsystems/job/o4xDafw8'>Vail Systems, Inc. Careers - Front-End Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vailsystems/job/o4xDafw8'>Vail Systems, Inc. Careers - Front-End Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Front-End Engineer. Vail Systems Company Profile. The human voice is capable 
 of conveying nuances and meaning that just can't be expressed through clicks?...</p>
@@ -183,11 +183,11 @@ of conveying nuances and meaning that just can't be expressed through clicks?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://futrli.workable.com/j/58436A7D2D'>Futrli - Jobs: Lead Frontend Engineer (Belfast) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/58436A7D2D'>Futrli - Jobs: Lead Frontend Engineer (Belfast) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://futrli.workable.com/j/879716E033'>Futrli - Jobs: Front End Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/879716E033'>Futrli - Jobs: Front End Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -259,11 +259,11 @@ design with the art of programming. You will be working on game-changing?...</p>
 <p>vor 4 Tagen ... Das hatchery Team sucht zum n?chstm?glichen Zeitpunkt einen... Praktikant 
 Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zl.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<h5><a href='https://zl.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
 <hr/>
-<h5><a href='https://ecosia.workable.com/jobs/1066033'>Senior Software Developer: Frontend focus - Apply ... - Ecosia - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ecosia.workable.com/jobs/1066033'>Senior Software Developer: Frontend focus - Apply ... - Ecosia - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Software Developer: Frontend focus at Ecosia.</p>
 <hr/>
@@ -285,7 +285,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Front-end Developer - CONTRACT at Pulselive.</p>
 <hr/>
-<h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Lead Frontend Developer at Drover.</p>
 <hr/>
@@ -301,7 +301,7 @@ have?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://seequent.workable.com/j/36B8CAFB5D'>Seequent - Jobs: Front-End Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/36B8CAFB5D'>Seequent - Jobs: Front-End Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -325,7 +325,7 @@ have?...</p>
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://docplanner.workable.com/j/C4A0A56403'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docplanner.workable.com/j/C4A0A56403'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -394,7 +394,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4359447002'>Job Application for Frontend Engineer - Extensions (Discovery & Management)  at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4359447002'>Job Application for Frontend Engineer - Extensions (Discovery & Management)  at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -427,7 +427,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aircall/fecc6c85-97cb-40de-b184-be5922000ed7'>Aircall - Senior Software Engineer - Front-end - Communications Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/aircall/fecc6c85-97cb-40de-b184-be5922000ed7'>Aircall - Senior Software Engineer - Front-end - Communications Platform</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -455,7 +455,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/jN18MVl59s/Front-End-Software-Engineer-III-Lehi-UT'>Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/jN18MVl59s/Front-End-Software-Engineer-III-Lehi-UT'>Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
